# webInk

./: .gitignore  Dockerfile  README.md  TODO.md  build-esphome.sh  setup-venv.sh  test-server.sh
.github/workflows/: esphome-build.yml  release.yml
apps/dashboard/: README.md  __init__.py  base_panel.py  calendar_panel.py  dashboard.py  dashboard_config.yaml  homeassistant_panel.py  rss_panel.py  weather_panel.py  weather_panel_enhanced.py  webpage_panel.py
client/esphome/: secrets.yaml  webInk copy.yaml  webink_clean.yaml  webink_cpp.yaml
client/esphome/webink_component/: COMPONENT_OVERVIEW.md  FILE_STRUCTURE.md  MEMORY_OPTIMIZATIONS.md  Makefile  PROTOCOL_FIXES.md  README.md  SERVER_PROTOCOL.md  WEBINK_LIFECYCLE.md  test_integration  test_protocol  test_server_connection  webink_controller.cpp  webink_esphome.h  webink_network.cpp  webink_state.cpp  webink_test_output.pgm
client/esphome/webink_component/examples/: basic_webink.yaml  test_webink.cpp
client/esphome/webink_component/webink/: __init__.py  webink.h  webink_config.cpp  webink_config.h  webink_controller.cpp  webink_controller.h  webink_display.cpp  webink_display.h  webink_esphome.cpp  webink_esphome.h  webink_image.cpp  webink_image.h  webink_network.cpp  webink_network.h  webink_state.h  webink_types.cpp  webink_types.h
server/: config.yaml  pyproject.toml  test_client.py  webInk.py
