[project]
name = "webInk"
version = "1.0.0"
description = "Web page snapshot server for low-memory eInk devices"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "feedparser>=6.0.0",
    "icalendar>=5.0.0",
    "requests>=2.31.0",
]

